packages/java/src/main/resources/natives/macos-arm64/include/liter_llm.h

typedef uint64_t LITERLLMAlefHandle;
LITERLLMAlefHandle literllm_chat_completion_request_from_json(const char *json);
void literllm_chat_completion_request_free(LITERLLMAlefHandle handle);
char *literllm_chat_completion_response_to_json(LITERLLMAlefHandle handle);
void literllm_chat_completion_response_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_create_image_request_from_json(const char *json);
void literllm_create_image_request_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_create_speech_request_from_json(const char *json);
void literllm_create_speech_request_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_create_transcription_request_from_json(const char *json);
void literllm_create_transcription_request_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_custom_provider_config_from_json(const char *json);
void literllm_custom_provider_config_free(LITERLLMAlefHandle handle);
void literllm_default_client_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_default_client_chat(LITERLLMAlefHandle this_,
                                                LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_embed(LITERLLMAlefHandle this_,
                                                 LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_list_models(LITERLLMAlefHandle this_);
LITERLLMAlefHandle literllm_default_client_image_generate(LITERLLMAlefHandle this_,
                                                          LITERLLMAlefHandle req);
int32_t literllm_default_client_speech(LITERLLMAlefHandle this_,
                                       LITERLLMAlefHandle req,
                                       uint8_t **out_ptr,
                                       uintptr_t *out_len,
                                       uintptr_t *out_cap);
LITERLLMAlefHandle literllm_default_client_transcribe(LITERLLMAlefHandle this_,
                                                      LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_moderate(LITERLLMAlefHandle this_,
                                                    LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_rerank(LITERLLMAlefHandle this_,
                                                  LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_search(LITERLLMAlefHandle this_,
                                                  LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_ocr(LITERLLMAlefHandle this_,
                                               LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_default_client_create_file(LITERLLMAlefHandle this_,
                                                       LITERLLMAlefHandle req);
LITERLLMAlefHandle literllm_embedding_request_from_json(const char *json);
void literllm_embedding_request_free(LITERLLMAlefHandle handle);
char *literllm_embedding_response_to_json(LITERLLMAlefHandle handle);
void literllm_embedding_response_free(LITERLLMAlefHandle handle);
char *literllm_images_response_to_json(LITERLLMAlefHandle handle);
void literllm_images_response_free(LITERLLMAlefHandle handle);
char *literllm_models_list_response_to_json(LITERLLMAlefHandle handle);
void literllm_models_list_response_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_moderation_request_from_json(const char *json);
void literllm_moderation_request_free(LITERLLMAlefHandle handle);
char *literllm_moderation_response_to_json(LITERLLMAlefHandle handle);
void literllm_moderation_response_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_ocr_request_from_json(const char *json);
void literllm_ocr_request_free(LITERLLMAlefHandle handle);
char *literllm_ocr_response_to_json(LITERLLMAlefHandle handle);
void literllm_ocr_response_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_rerank_request_from_json(const char *json);
void literllm_rerank_request_free(LITERLLMAlefHandle handle);
char *literllm_rerank_response_to_json(LITERLLMAlefHandle handle);
void literllm_rerank_response_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_search_request_from_json(const char *json);
void literllm_search_request_free(LITERLLMAlefHandle handle);
char *literllm_search_response_to_json(LITERLLMAlefHandle handle);
void literllm_search_response_free(LITERLLMAlefHandle handle);
char *literllm_transcription_response_to_json(LITERLLMAlefHandle handle);
void literllm_transcription_response_free(LITERLLMAlefHandle handle);
LITERLLMAlefHandle literllm_create_client(const char *api_key,
                                          const char *base_url,
                                          uint64_t timeout_secs,
                                          uint32_t max_retries,
                                          const char *model_hint);
LITERLLMAlefHandle literllm_create_client_from_json(const char *json);
int32_t literllm_register_custom_provider(LITERLLMAlefHandle config);
int32_t literllm_unregister_custom_provider(const char *name);