packages/csharp/LiterLlm/NativeMethods.cs

// This file is auto-generated by alef — DO NOT EDIT.
// alef:hash:0b8d25a3116578d9135d8c99828740b843e3d43e72ad2ce202052c4c7c3e7067
// To regenerate: alef generate
// To verify freshness: alef verify --exit-code
// Issues & docs: https://github.com/kreuzberg-dev/alef
#nullable enable

using System;
using System.Runtime.InteropServices;

namespace LiterLlm;

internal static partial class NativeMethods
{
    private const string LibName = "liter_llm_ffi";

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chat_completion_request_from_json")]
    internal static extern IntPtr ChatCompletionRequestFromJson([MarshalAs(UnmanagedType.LPStr)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chat_completion_request_free")]
    internal static extern void ChatCompletionRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_image_request_from_json")]
    internal static extern IntPtr CreateImageRequestFromJson([MarshalAs(UnmanagedType.LPStr)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_image_request_free")]
    internal static extern void CreateImageRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_speech_request_from_json")]
    internal static extern IntPtr CreateSpeechRequestFromJson([MarshalAs(UnmanagedType.LPStr)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_speech_request_free")]
    internal static extern void CreateSpeechRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_transcription_request_from_json")]
    internal static extern IntPtr CreateTranscriptionRequestFromJson([MarshalAs(UnmanagedType.LPStr)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_transcription_request_free")]
    internal static extern void CreateTranscriptionRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_custom_provider_config_from_json")]
    internal static extern IntPtr CustomProviderConfigFromJson([MarshalAs(UnmanagedType.LPStr)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_custom_provider_config_free")]
    internal static extern void CustomProviderConfigFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_embedding_request_from_json")]
    internal static extern IntPtr EmbeddingRequestFromJson([MarshalAs(UnmanagedType.LPStr)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_embedding_request_free")]
    internal static extern void EmbeddingRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_moderation_request_from_json")]
    internal static extern IntPtr ModerationRequestFromJson([MarshalAs(UnmanagedType.LPStr)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_moderation_request_free")]
    internal static extern void ModerationRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_ocr_request_from_json")]
    internal static extern IntPtr OcrRequestFromJson([MarshalAs(UnmanagedType.LPStr)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_ocr_request_free")]
    internal static extern void OcrRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rerank_request_from_json")]
    internal static extern IntPtr RerankRequestFromJson([MarshalAs(UnmanagedType.LPStr)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rerank_request_free")]
    internal static extern void RerankRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_search_request_from_json")]
    internal static extern IntPtr SearchRequestFromJson([MarshalAs(UnmanagedType.LPStr)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_search_request_free")]
    internal static extern void SearchRequestFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chat_completion_response_to_json")]
    internal static extern IntPtr ChatCompletionResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_chat_completion_response_free")]
    internal static extern void ChatCompletionResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_free")]
    internal static extern void DefaultClientFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_embedding_response_to_json")]
    internal static extern IntPtr EmbeddingResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_embedding_response_free")]
    internal static extern void EmbeddingResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_images_response_to_json")]
    internal static extern IntPtr ImagesResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_images_response_free")]
    internal static extern void ImagesResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_models_list_response_to_json")]
    internal static extern IntPtr ModelsListResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_models_list_response_free")]
    internal static extern void ModelsListResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_moderation_response_to_json")]
    internal static extern IntPtr ModerationResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_moderation_response_free")]
    internal static extern void ModerationResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_ocr_response_to_json")]
    internal static extern IntPtr OcrResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_ocr_response_free")]
    internal static extern void OcrResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rerank_response_to_json")]
    internal static extern IntPtr RerankResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_rerank_response_free")]
    internal static extern void RerankResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_search_response_to_json")]
    internal static extern IntPtr SearchResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_search_response_free")]
    internal static extern void SearchResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_transcription_response_to_json")]
    internal static extern IntPtr TranscriptionResponseToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_transcription_response_free")]
    internal static extern void TranscriptionResponseFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_client")]
    internal static extern IntPtr CreateClient(
        [MarshalAs(UnmanagedType.LPStr)] string apiKey,
        [MarshalAs(UnmanagedType.LPStr)] string baseUrl,
        ulong timeoutSecs,
        uint maxRetries,
        [MarshalAs(UnmanagedType.LPStr)] string modelHint
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_create_client_from_json")]
    internal static extern IntPtr CreateClientFromJson(
        [MarshalAs(UnmanagedType.LPStr)] string json
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_register_custom_provider")]
    internal static extern void RegisterCustomProvider(
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_unregister_custom_provider")]
    internal static extern int UnregisterCustomProvider(
        [MarshalAs(UnmanagedType.LPStr)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_chat")]
    internal static extern IntPtr DefaultClientChat(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_embed")]
    internal static extern IntPtr DefaultClientEmbed(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_list_models")]
    internal static extern IntPtr DefaultClientListModels(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_image_generate")]
    internal static extern IntPtr DefaultClientImageGenerate(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_speech")]
    internal static extern IntPtr DefaultClientSpeech(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_transcribe")]
    internal static extern IntPtr DefaultClientTranscribe(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_moderate")]
    internal static extern IntPtr DefaultClientModerate(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_rerank")]
    internal static extern IntPtr DefaultClientRerank(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_search")]
    internal static extern IntPtr DefaultClientSearch(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_ocr")]
    internal static extern IntPtr DefaultClientOcr(
        IntPtr handle,
        IntPtr req
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "literllm_default_client_create_file")]
    internal static extern IntPtr DefaultClientCreateFile(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPStr)] string req
    );
